--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             <img src="resources/yermap.jpg" alt="Logo YERMAP" class="logo" width="100" height="100">
         </div>
 
+        <input type="text" id="locationInput" placeholder="Buscar lugar..." class="form-control mb-3 mt-1"/>
+        <ul id="suggestions" class="list-group mt-1 mb-2" style="max-height: 200px; overflow-y: auto;"></ul>
+        
+
         <div id="map"></div>
 
         <!-- Modal para añadir un nuevo punto -->
