--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <link rel="stylesheet" href="css/index.css">
 
     <!-- Favicon -->
-    <link rel="icon" href="resources/yermap.jpg" type="image/jpg">
+    <link rel="icon" href="resources/yermap2.png" type="image/jpg">
 
 </head>
 <body>
     <div class="container">
         <!-- Logo centrado -->
         <div class="logo-container">
-            <img src="resources/yermap.jpg" alt="Logo YERMAP" class="logo" width="100" height="100">
+            <img src="resources/yermap2.png" alt="Logo YERMAP" class="logo" width="100" height="100">
         </div>
 
         <input type="text" id="locationInput" placeholder="Buscar lugar..." class="form-control mb-3 mt-1"/>
