--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title" id="modalPuntoLabel">Añadir un nuevo punto</h5>
+                <h5 class="modal-title" id="modalPuntoLabel">Añadir un nuevo lugar</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="cerrarModal"></button>
                 </div>
                 <div class="modal-body">
@@ -62,10 +62,7 @@
                       <option value="red">Difícil</option>
                     </select>
                 </div>
-                <div class="mb-3">
-                    <label for="image" class="form-label">Imagen (opcional)</label>
-                    <input type="text" class="form-control" id="image" placeholder="URL de la imagen (opcional)">
-                </div>
+                
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-primary" id="guardarPunto">Guardar</button>
